--- a/trails.ipynb
+++ b/trails.ipynb
@@ -45,6 +45,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY=\"d84097ae-e144-4c50-b588-e48ed65da1c7\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract data from the PDF\n",
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(data,\n",
+    "                    glob=\"*.pdf\",\n",
+    "                    loader_cls=PyPDFLoader)\n",
+    "    \n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
