--- a/trails.ipynb
+++ b/trails.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY=\"d84097ae-e144-4c50-b588-e48ed65da1c7\"\n",
-    "OPEN_AI_API_KEY=\"_sk-proj-zPnB4pxtRhqdW9cZGBzZIXK3-m-5RrXHJe30QLQ1tQ30QFI835s5bSKQtOukmeO2LaahDo8SNwT3BlbkFJkH3ckjt1PfWzz1MrLr-GLBhCMo54YiKbt7ks53t2w1NSwtYjvotOAg1XqaG0y2V4KDnGe45ukA\"\n"
+    "PINECONE_API_KEY=\"PINECONE API\"\n",
+    "OPEN_AI_API_KEY=\"OPEN_AI_API_KEY\"\n"
    ]
   },
   {
@@ -426,7 +426,7 @@
    "source": [
     "from langchain_openai import OpenAI\n",
     "\n",
-    "llm = OpenAI(temperature=0.4, max_tokens=200, api_key=\"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\")\n"
+    "llm = OpenAI(temperature=0.4, max_tokens=200, api_key=\"OPEN_AI_API_KEY\")\n"
    ]
   },
   {
